# AutoGPT

./: # Code Citations.md  .application.logs  .branchlet.json  .coverage  .coveragerc  .deepsource.toml  .dockerignore  .env  .env.  .env.bak  .env.default  .env.example  .env.template  .env_old  .envrc  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .isort.cfg  .last_checked_time  .mcp.json  .pr_agent.toml  .pre-commit-config.yaml  .python-version  .secrets.baseline  .sourcery.yaml  1.env  3.0.38  404.html  AGENTS.md  AI_management.py  API_DOCUMENTATION.md  ARCHITECTURE.md  AutoGPT-Injestion  AutoGPT.json  AutoGpt.json  BULLETIN.md  Brewfile  (+252 more)
Auto-GPT-Plugins.zip/: .editorconfig  .gitignore  pylintrc  pyproject.toml  requirements.txt  sourcery.yaml
Auto-GPT-Plugins.zip/.github/: CODEOWNERS
autogpt/: .env.template  .gitignore  .pre-commit-config.yaml  AutoGPT.sln  BULLETIN.md  Dockerfile  README.md  __init__.py  __main__.py  agent.py  agent_manager.py  agent_test.py  ai_config.py  ai_functions.py  ai_guidelines.py  ai_settings copy.yaml  aim.py  api.py  api_manager.py  app.py  application.py  args.py  autogpt.bat  autogpt.sh  benchmark_integration.py  browse.py  call_ai_function.py  chat.py  cli.py  command_decorator.py  commands.py  config.json.template  config.py  configurator.py  constants.py  custom_types.py  data.py  data_ingestion.py  db.py  db_test.py  (+46 more)
autogpt/.user.workspace/: api_requestor.py  bing_pro_tip  bing_pro_tip.txt
autogpt/AutoGPT/: AutoGPT.pyproj
autogpt/agbenchmark_config/: .gitignore  analyze_reports.py  benchmarks.py
autogpt/agent/: __init__.py  agent.py  agent_builder.py  agent_manager.py  agent_utils.py  async_agent.py  autogpt_core.py  base_ai_core.py  base_llm_provider.py  build_agent.py  dr_autogpt.agent_tester.py  messages.py
autogpt/agent_protocol/: README.md  __init__.py  agent.py  db.py  middlewares.py  models.py  server.py
autogpt/agents/: __init__.py  agent.py  base.py  planning_agent.py
autogpt/api/: __main__.py  application.py  lifetime.py  server.py  settings.py
autogpt/app/: cli.py  configurator.py  main.py  prompt.py  setup.py  spinner.py  utils.py
autogpt/auto_gpt_workspace/: advanced_technologies.txt  agent_keys.txt  auto-gpt-memory.json  evaluation_of_nations_power.txt  file_logger.txt  google_search_results.txt  hardwork_outline.txt  instance_history.txt  list_of_informants.txt  successful_people.txt  tesla_revenue_2022.txt
autogpt/change_navigator/: __init__.py  agent.py  journal.py  prompts.py  workflow.py
autogpt/coaching/: __init__.py  api.py  auth.py  config.py  dashboard.py  demo_ui.py  llm.py  models.py  prompts.py  session.py  setup_db.py  storage.py  supabase_schema.sql  telegram_bot.py
autogpt/collections/: default.py
autogpt/commands/: __init__.py  analyze_code.py  audio_text.py  captcha_challenge.py  code_generation.py  command.py  db_search.py  decorators.py  email.py  email_operations.py  evaluate_code.py  execute_code.py  file_context.py  file_operations.py  file_operations_utils.py  get_num_astronauts.py  git_operations.py  google_search.py  image_gen.py  image_text.py  improve_code.py  internals.py  loopwatcher.py  math.py  news_aggregation.py  openapi.py  organize_filesystem.py  send_text.py  social_media.py  system.py  task_statuses.py  telegram.py  times.py  twitter.py  user_interaction.py  validators.py  web_playwright.py  web_requests.py  web_search.py  web_selenium.py  (+2 more)
autogpt/config/: ProjectConfigBroker.py  __init__.py  ai_config.py  ai_directives.py  config.py  container_config.py  external_db_config.py  project_config_broker.py  prompt_config.py  singleton.py
autogpt/contexts/: context_template.md  contextualize.py  markdown_parsing.py  templates.py
autogpt/core/: ARCHITECTURE_NOTES.md  README.md  __init__.py  agent.py  agent_factory.py  agent_team.py  cli.py  logging_config.py  project.py  projects_broker.py  schema.py  server.py  status.py  system_config.py
autogpt/data/: prompt.txt  qa_prompt.txt
autogpt/dsl_parsing/: dsl_parser.py
autogpt/exceptions/: __init__.py  custom_exceptions.py  exception_handler.py
autogpt/install/: __init__.py  install.py  installer.py  upgrade.py
autogpt/interaction/: base.py  console.py  interaction_manager.py
autogpt/js/: overlay.js  response_1686626771105.json
autogpt/json_fixes/: auto_fix.py  bracket_termination.py  escaping.py  master_json_fix_method.py  missing_quotes.py  parsing.py  utilities.py
autogpt/json_schemas/: llm_response_format_1.json
autogpt/json_utils/: auto_fix.py  json_fix_general.py  json_fix_llm.py  json_fixer.py  llm_response_format_1.json  utilities.py
autogpt/json_validation/: validate_json.py
autogpt/kill_switch/: __init__.py  kill_switch.py
autogpt/llamafile-integration/: README.md  env.llamafile.example  serve.sh  setup-llamafile.sh
autogpt/llm/: __init__.py  api_manager.py  base.py  chat.py  command_error.py  llm_utils.py  modelsinfo.py  token_counter.py
autogpt/log_cycle/: json_handler.py  log_cycle.py  log_cycle_mixin.py
autogpt/logs/: __init__.py  config.py  formatters.py  handlers.py  helpers.py  log_cycle.py  logger.py  utils.py
benchmark/: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  LICENSE  README.md  agents_to_benchmark.json  benchmark_entrepeneur_gpt_with_difficult_user.py  benchmark_entrepreneur_gpt_with_difficult_user.py  pyproject.toml  run.sh  run_benchmark.sh  server.py
classic/: .dockerignore  .flake8  CLAUDE.md  CLI-USAGE.md  Dockerfile.autogpt  FORGE-QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  cli.py  pyproject.toml  run  test.db
forge/: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  helicone_data.py  prometheus.yml  pyproject.toml  setup
solenne/: AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  ai.py  api.py  config.py  mypy.ini  persona.md  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  setup_env.ps1  setup_env.sh  solenne_emotion.json  solenne_log.json  solenne_text.json  tools.py
(+20730 files in other folders)
