[tool.poetry]
name = "agbenchmark"
version = "0.0.10"
description = "Benchmarking the performance of agents far and wide, regardless of how they are set up and how they work"
authors = ["AutoGPT Team"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agbenchmark" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.2"
requests = "^2.31.0"
openai = "^1.7.2"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
click = "^8.1.3"
types-requests = "^2.31.0.1"
pexpect = "^4.8.0"
psutil = "^5.9.5"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
gitpython = "^3.1.32"
networkx = "^3.1"
colorama = "^0.4.6"
pyvis = "^0.3.2"
selenium = "^4.11.2"
pytest-asyncio = "^0.21.1"
uvicorn = "^0.23.2"
fastapi = "^0.109.1"
python-multipart = "^0.0.7"
toml = "^0.10.2"
# helicone = "^1.0.9"  # incompatible with openai@^1.0.0
httpx = "^0.24.0"
agent-protocol-client = "^1.1.0"
click-default-group = "^1.2.4"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.1"
pyright = "^1.1.364"
pandas = "^2.0.3"
gspread = "^5.10.0"
oauth2client = "^4.1.3"
pre-commit = "^3.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
agbenchmark = "agbenchmark.__main__:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'


[tool.isort]
profile = "black"
skip_glob = ["reports"]


[tool.pyright]
pythonVersion = "3.10"
exclude = [
    "notebooks/**",
    "reports/**",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
ignore = [
    "../forge/**"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
