[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = [
  "SwiftyOS <craigswift13@gmail.com>",
  "Nicholas Tindle <spam@ntindle.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.15.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
sentry-sdk = { extras = ["fastapi"], version = "^2.18.0" }
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
# autogpt-platform-backend = { path = "../backend", develop = true }
prometheus-fastapi-instrumentator = "^7.0.0"


autogpt-libs = {path = "../autogpt_libs"}
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

pytest-watcher = "^0.4.3"
requests = "^2.32.3"
ruff = "^0.7.3"
pyright = "^1.1.388"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "scripts:format"
lint = "scripts:lint"
app = "scripts:app"
setup = "scripts:setup"
populate = "scripts:populate_database"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
